# StackBasedFunction

./: .gitignore  CMakeLists.txt  nonconst_executor.hpp  nontrivial_deleter.hpp  stack_based_function.cpp  stack_based_function.hpp  test.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp
benchmarks/google_benchmark/: benchmark.cpp
include/: args_helper.hpp  const_member_function_helper.hpp  lambda_capture_helper.hpp  signature_helper.hpp  stack_based_function.hpp
tests/: CMakeLists.txt  test.cpp
